--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,12 +44,12 @@
 
     <Button
         android:id="@+id/btnCancel"
-        android:onClick="clickHandler"
-
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
         android:layout_marginTop="35dp"
+        android:onClick="clickHandler"
         android:text="cancel"
         app:layout_constraintStart_toEndOf="@+id/btnLogin"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
@@ -63,4 +63,22 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="82dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnCancel"
+        app:srcCompat="@drawable/ic_baseline_home_24" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:entries="@array/phonetype"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/etName"
+        app:layout_constraintStart_toEndOf="@id/etName"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
