--- a/app/src/main/res/layout/row_plank.xml
+++ b/app/src/main/res/layout/row_plank.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="10dp"
+    android:layout_width="200dp"
+    android:elevation="7dp"
+    android:padding="10dp"
+    android:outlineSpotShadowColor="@color/black"
     android:layout_height="wrap_content">
 
     <TextView
+        android:padding="5dp"
         android:id="@+id/tvCuisine"
         android:textSize="18sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView" />
-</LinearLayout>
+</androidx.cardview.widget.CardView>
