--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -12,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="34dp"
         android:layout_marginTop="47dp"
-        android:layout_marginBottom="142dp"
         android:ems="10"
         android:hint="enter contact details"
         android:inputType="textPersonName"
@@ -37,6 +36,7 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="34dp"
         android:text="contact"
+        style="@style/myfontstyle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnContact" />
 
@@ -63,4 +63,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etContact" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginEnd="26dp"
+        android:layout_marginBottom="25dp"
+        android:text="TextView"
+        style="@style/myfontstyle"
+        app:layout_constraintBottom_toTopOf="@+id/lvLanguages"
+        app:layout_constraintEnd_toStartOf="@+id/btnGallery" />
+
+    <TextView
+        android:id="@+id/textView3"
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:layout_marginBottom="24dp"
+        android:text="TextView"
+      style="@style/myfontstyle"
+        app:layout_constraintBottom_toTopOf="@+id/lvLanguages"
+        app:layout_constraintStart_toStartOf="@+id/btnGallery" />
 </androidx.constraintlayout.widget.ConstraintLayout>
