--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,12 +31,12 @@
 
     <TextView
         android:id="@+id/tvContact"
+        style="@style/myfontstyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="35dp"
         android:layout_marginTop="34dp"
         android:text="contact"
-        style="@style/myfontstyle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnContact" />
 
@@ -66,25 +66,25 @@
 
     <TextView
         android:id="@+id/textView2"
+        style="@style/myfontstyle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
 
+        android:layout_height="wrap_content"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="25dp"
         android:text="TextView"
-        style="@style/myfontstyle"
         app:layout_constraintBottom_toTopOf="@+id/lvLanguages"
         app:layout_constraintEnd_toStartOf="@+id/btnGallery" />
 
     <TextView
         android:id="@+id/textView3"
 
+        style="@style/red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="24dp"
         android:text="TextView"
-      style="@style/myfontstyle"
         app:layout_constraintBottom_toTopOf="@+id/lvLanguages"
         app:layout_constraintStart_toStartOf="@+id/btnGallery" />
 </androidx.constraintlayout.widget.ConstraintLayout>
