--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,10 @@
         <item name="android:textColor">@android:color/holo_orange_dark</item>
         <item name="android:textSize">18sp</item>
     </style>
+    <style name="red" parent="myfontstyle">
+        <item name="android:textColor">@android:color/holo_red_dark</item>
+
+    </style>
 </resources>
 
  <!--   android:textColor="@color/design_default_color_primary"
