--- a/app/src/main/res/layout/activity_fcm.xml
+++ b/app/src/main/res/layout/activity_fcm.xml
@@ -27,4 +27,15 @@
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnService"
+        android:onClick="serviceHandler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginTop="39dp"
+        android:text="start service"
+        app:layout_constraintStart_toStartOf="@+id/btnFcm"
+        app:layout_constraintTop_toBottomOf="@+id/btnFcm" />
 </androidx.constraintlayout.widget.ConstraintLayout>
