--- a/app/src/main/res/layout/activity_fcm.xml
+++ b/app/src/main/res/layout/activity_fcm.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
         android:layout_marginTop="53dp"
+        android:layout_marginBottom="183dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,12 +31,24 @@
 
     <Button
         android:id="@+id/btnService"
-        android:onClick="serviceHandler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:layout_marginTop="39dp"
+        android:onClick="serviceHandler"
         android:text="start service"
         app:layout_constraintStart_toStartOf="@+id/btnFcm"
         app:layout_constraintTop_toBottomOf="@+id/btnFcm" />
+
+    <ListView
+        android:id="@+id/cpListview"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etPrefs" />
 </androidx.constraintlayout.widget.ConstraintLayout>
